<resources>
    <string name="app_name">Nike Exclusives</string>
    <string name="shopTitle">Welcome Customer!</string>
    <string name="shopSubtitle">The Best Exclusives!</string>
    <string name="shopButton">OFFER</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">TOTAL TO MAX BID</string>
    <string name="total">Amount Spent</string>
    <string name="totaltickets">Tickets Purchased</string>
    <string name="totalSoFar">$0</string>
    <string name="totalSoFar1">0</string>
    <string name="reportTitle">Purchase Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_shop">Shop</string>
    <string name="action_report">Previous Bids</string>
    <string name="title_activity_purchase">Purchase</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NIKE </string>
    <string name="nav_header_subtitle">THE HOME OF EXCLUSIVE TRAINERS</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_previous_winners">PreviousWinners</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_previous_winners_page2">PreviousWinnersPage2</string>
    <string name="title_activity_previous_winners_page3">PreviousWinnersPage3</string>
    <string name="title_activity_previous_winners_page4">PreviousWinnersPage4</string>
    <string name="title_activity_maps">maps</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="title_activity_aboutus">aboutus</string>
</resources>